--- a/examples/discovery-components-react/package.json
+++ b/examples/discovery-components-react/package.json
@@ -9,7 +9,7 @@
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^1.1.4",
-    "discovery-components-react": "link:../../packages/discovery-components-react"
+    "discovery-components-react": "^1.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
