--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -1,17 +1,21 @@
 {
   "name": "discovery-components-react",
-  "version": "1.0.0",
   "description": "",
-  "author": "",
   "license": "MIT",
+  "author": "",
   "repository": "/discovery-components-react",
+  "version": "1.0.0",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
-  "jsnext:main": "dist/index.es.js",
-  "engines": {
-    "node": ">=8",
-    "npm": ">=5"
+  "scripts": {
+    "test": "cross-env CI=1 react-scripts test --env=jsdom",
+    "test:watch": "react-scripts test --env=jsdom",
+    "build": "rollup -c",
+    "start": "rollup -c -w"
   },
+  "files": [
+    "dist"
+  ],
   "dependencies": {},
   "peerDependencies": {
     "prop-types": "^15.5.4",
@@ -19,28 +23,28 @@
     "react-dom": "^15.0.0 || ^16.0.0"
   },
   "devDependencies": {
-    "@svgr/rollup": "^2.4.1",
-    "@types/jest": "^23.1.5",
-    "@types/react": "^16.3.13",
-    "@types/react-dom": "^16.0.5",
-    "babel-core": "^6.26.3",
-    "babel-runtime": "^6.26.0",
+    "@babel/core": "^7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@svgr/rollup": "^4.3.2",
+    "@types/jest": "^24.0.18",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
     "cross-env": "^5.1.4",
-    "gh-pages": "^1.2.0",
-    "react": "^16.4.1",
-    "react-dom": "^16.4.1",
-    "react-scripts-ts": "^2.16.0",
-    "rollup": "^0.62.0",
-    "rollup-plugin-babel": "^3.0.7",
-    "rollup-plugin-commonjs": "^9.1.3",
-    "rollup-plugin-node-resolve": "^3.3.0",
+    "gh-pages": "^2.1.1",
+    "react-scripts": "^3.1.1",
+    "rollup": "^1.20.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
-    "rollup-plugin-postcss": "^1.6.2",
-    "rollup-plugin-typescript2": "^0.17.0",
-    "rollup-plugin-url": "^1.4.0",
-    "typescript": "^2.8.3"
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-typescript2": "^0.23.0",
+    "rollup-plugin-url": "^2.2.2",
+    "typescript": "^3.5.3"
   },
-  "files": [
-    "dist"
-  ]
+  "engines": {
+    "node": ">=8",
+    "npm": ">=5"
+  },
+  "jsnext:main": "dist/index.es.js"
 }
