--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -8,7 +8,14 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test": "react-scripts test --env=jsdom"
+    "test:e2e": "BROWSER=none start-server-and-test start http://localhost:3000 './node_modules/.bin/cypress run'",
+    "test:unit": "CI=1 react-scripts test --env=jsdom",
+    "test": "yarn test:unit && yarn test:e2e",
+    "cypress": "cypress open"
+  },
+  "devDependencies": {
+    "cypress": "3.2.0",
+    "start-server-and-test": "^1.10.0"
   },
   "dependencies": {
     "discovery-components-react": "^1.0.0",
