--- a/packages/discovery-components-react/tsconfig.json
+++ b/packages/discovery-components-react/tsconfig.json
@@ -27,8 +27,7 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "resolveJsonModule": true,
-    "noEmit": true,
-    "isolatedModules": true
+    "noEmit": true
   },
   "include": [
     "src"
