--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: node_js
 node_js:
-- stable
+  - stable
 addons:
   apt:
     packages:
@@ -26,5 +26,6 @@ notifications:
 before_install:
   - npm install -g yarn
 script:
+  - yarn lint
   - lerna run build
   - lerna run test
