--- a/packages/discovery-components-react/tsconfig.json
+++ b/packages/discovery-components-react/tsconfig.json
@@ -3,12 +3,7 @@
     "outDir": "build",
     "module": "esnext",
     "target": "es5",
-    "lib": [
-      "es6",
-      "dom",
-      "es2016",
-      "es2017"
-    ],
+    "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
@@ -29,13 +24,6 @@
     "resolveJsonModule": true,
     "noEmit": true
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-    "node_modules",
-    "build",
-    "dist",
-    "rollup.config.js"
-  ]
+  "include": ["src"],
+  "exclude": ["node_modules", "build", "dist", "rollup.config.js"]
 }
