--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -18,11 +18,11 @@
     "dist"
   ],
   "peerDependencies": {
+    "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
     "ibm-watson": "^4.4.0",
-    "prop-types": "^15.5.4",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "react": "^16.8.0",
+    "react-dom": "^16.8.0"
   },
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -40,8 +40,11 @@
     "@types/storybook__addon-knobs": "^5.0.3",
     "@types/storybook__react": "^4.0.2",
     "awesome-typescript-loader": "^5.2.1",
+    "carbon-components": "^10.6.0",
+    "carbon-components-react": "^7.6.0",
     "cross-env": "^5.1.4",
     "gh-pages": "^2.1.1",
+    "ibm-watson": "^4.4.0",
     "react-docgen-typescript-loader": "^3.1.1",
     "react-scripts": "^3.1.1",
     "rollup": "^1.20.2",
