--- a/packages/discovery-components-react/tsconfig.json
+++ b/packages/discovery-components-react/tsconfig.json
@@ -22,7 +22,8 @@
     "allowSyntheticDefaultImports": true,
     "strict": true,
     "resolveJsonModule": true,
-    "noEmit": true
+    "noEmit": true,
+    "isolatedModules": true
   },
   "include": ["src"],
   "exclude": ["node_modules", "build", "dist", "rollup.config.js"]
