feat: add express server

--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -2,8 +2,8 @@
   "private": true,
   "name": "discovery-components-react-example",
   "license": "MIT",
-  "homepage": "https://.github.io/discovery-components-react",
-  "version": "1.0.0",
+  "homepage": ".",
+  "version": "0.0.0",
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
@@ -11,16 +11,20 @@
     "test:e2e": "BROWSER=none start-server-and-test start http://localhost:3000 './node_modules/.bin/cypress run'",
     "test:unit": "CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
-    "cypress": "cypress open"
+    "cypress": "cypress open",
+    "server": "node ./server.js"
   },
   "devDependencies": {
     "cypress": "3.2.0",
     "start-server-and-test": "^1.10.0"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
     "@disco-widgets/react-components": "^1.7.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
     "ibm-watson": "^4.4.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
