--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -20,6 +20,7 @@
   "peerDependencies": {
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
+    "carbon-icons": "^7.0.7",
     "ibm-watson": "^4.4.0",
     "react": "^16.8.0",
     "react-dom": "^16.8.0"
@@ -42,6 +43,7 @@
     "awesome-typescript-loader": "^5.2.1",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
+    "carbon-icons": "^7.0.7",
     "cross-env": "^5.1.4",
     "gh-pages": "^2.1.1",
     "ibm-watson": "^4.4.0",
