--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -8,7 +8,7 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test:e2e": "BROWSER=none start-server-and-test start http://localhost:3000 './node_modules/.bin/cypress run'",
+    "test:e2e": "BROWSER=none start-server-and-test server http://localhost:4000 './node_modules/.bin/cypress run'",
     "test:unit": "CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
     "cypress": "cypress open",
