--- a/.eslintrc
+++ b/.eslintrc
@@ -24,6 +24,10 @@
   "rules": {
     "@typescript-eslint/indent": ["error", 2],
     "@typescript-eslint/camelcase": ["error", { "properties": "never" }],
+    "@typescript-eslint/explicit-function-return-type": [
+      "warn",
+      { "allowTypedFunctionExpressions": true }
+    ],
     "react/prop-types": "off"
   }
 }
