--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -19,10 +19,11 @@
     "start-server-and-test": "^1.10.0"
   },
   "dependencies": {
+    "@disco-widgets/react-components": "^1.7.0",
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
-    "@disco-widgets/react-components": "^1.7.0",
+    "carbon-icons": "^7.0.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "ibm-watson": "^4.4.0",
