--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -8,15 +8,11 @@
     "build": "react-scripts build",
     "eject": "react-scripts eject",
     "start": "react-scripts start",
-    "test:e2e": "BROWSER=none CYPRESS_baseUrl=http://localhost:4000 start-server-and-test server http://localhost:4000 './node_modules/.bin/cypress run'",
+    "test:e2e": "BROWSER=none CYPRESS_baseUrl=http://localhost:4000 start-server-and-test server http://localhost:4000 'cypress run'",
     "test:unit": "CI=1 react-scripts test --env=jsdom",
     "test": "yarn test:unit && yarn test:e2e",
     "cypress": "cypress open",
     "server": "node ./server.js"
-  },
-  "devDependencies": {
-    "cypress": "3.2.0",
-    "start-server-and-test": "^1.10.0"
   },
   "dependencies": {
     "@disco-widgets/react-components": "^1.7.0",
