--- a/package.json
+++ b/package.json
@@ -2,23 +2,55 @@
   "name": "root",
   "private": true,
   "devDependencies": {
+    "@babel/core": "7.5.5",
+    "@babel/runtime": "^7.5.5",
+    "@storybook/addon-actions": "^5.1.11",
+    "@storybook/addon-info": "^5.1.11",
+    "@storybook/addon-knobs": "^5.1.11",
+    "@storybook/addon-storysource": "^5.1.11",
+    "@storybook/react": "^5.1.11",
+    "@svgr/rollup": "^4.3.2",
+    "@types/jest": "^24.0.18",
+    "@types/node": "^12.7.3",
+    "@types/react": "^16.9.2",
+    "@types/react-dom": "^16.9.0",
+    "@types/storybook__addon-knobs": "^5.0.3",
+    "@types/storybook__react": "^4.0.2",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
-    "@babel/core": "7.5.5",
+    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
+    "carbon-components": "^10.6.0",
+    "carbon-components-react": "^7.6.0",
+    "carbon-icons": "^7.0.7",
+    "cross-env": "^5.1.4",
+    "cypress": "3.2.0",
     "eslint": "^6.3.0",
     "eslint-config-prettier": "^6.2.0",
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
+    "ibm-watson": "^4.4.0",
     "lerna": "^3.16.4",
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
     "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
+    "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
+    "react-scripts": "^3.1.1",
+    "rollup": "^1.20.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-peer-deps-external": "^2.2.0",
+    "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-typescript2": "^0.23.0",
+    "rollup-plugin-url": "^2.2.2",
+    "start-server-and-test": "^1.10.0",
     "typescript": "^3.5.3",
     "webpack": "4.39.1"
   },
