init SearchInput component

--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -59,5 +59,10 @@
   "jsnext:main": "dist/index.es.js",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "carbon-components": "^10.6.1",
+    "carbon-components-react": "^7.6.1",
+    "carbon-icons": "^7.0.7"
   }
 }
