--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@storybook/addon-storysource": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "@svgr/rollup": "^4.3.2",
+    "@testing-library/react": "^9.1.4",
     "@types/jest": "^24.0.18",
     "@types/node": "^12.7.3",
     "@types/react": "^16.9.2",
