--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -8,8 +8,9 @@
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "scripts": {
-    "test": "cross-env CI=1 react-scripts test --env=jsdom",
-    "test:watch": "react-scripts test --env=jsdom",
+    "test": "cross-env CI=1 react-scripts test",
+    "test:watch": "react-scripts test --watch",
+    "code-coverage": "jest --collectCoverage",
     "build": "rollup -c",
     "start": "rollup -c -w",
     "storybook": "start-storybook"
