bug: fix npm publishing (#89)

--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ before_deploy:
   - git checkout master
 deploy:
   provider: script
+  skip_cleanup: true
   script: 
     - npx lerna publish -y
   on:
