--- a/packages/discovery-components-react/tsconfig.json
+++ b/packages/discovery-components-react/tsconfig.json
@@ -1,13 +1,12 @@
 {
   "compilerOptions": {
-    "outDir": "build",
+    "outDir": "dist",
     "module": "esnext",
     "target": "es5",
     "lib": ["es6", "dom", "es2016", "es2017"],
     "sourceMap": true,
     "allowJs": false,
     "jsx": "react",
-    "declaration": true,
     "moduleResolution": "node",
     "forceConsistentCasingInFileNames": true,
     "noImplicitReturns": true,
