docs: Add task for building storybook static artifacts (#95)
* Add package docs

* Add task to build static storybook artifacts

--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -13,7 +13,8 @@
     "code-coverage": "jest --collectCoverage",
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "storybook": "start-storybook"
+    "storybook": "start-storybook",
+    "storybook:build": "build-storybook -c .storybook -o ../../docs/storybook"
   },
   "files": [
     "dist"
