chore(lerna): ignore changes in examples directory (#100)

--- a/lerna.json
+++ b/lerna.json
@@ -10,7 +10,8 @@
       "conventionalCommits": true
     },
     "version": {
-      "message": "chore: publish to NPM [ci skip]"
+      "message": "chore: publish to NPM [ci skip]",
+      "ignoreChanges": ["examples/**"]
     }
   }
 }
