--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "@storybook/addon-storysource": "^5.1.11",
     "@storybook/react": "^5.1.11",
     "@svgr/rollup": "^4.3.2",
+    "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@types/jest": "^24.0.18",
+    "@types/lodash.get": "^4.4.6",
     "@types/node": "^12.7.3",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
