--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -35,5 +35,8 @@
   "jsnext:main": "dist/index.es.js",
   "publishConfig": {
     "access": "public"
+  },
+  "dependencies": {
+    "lodash.get": "^4.4.2"
   }
 }
