--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "carbon-components": "^10.6.1",
     "carbon-components-react": "^7.6.1",
-    "carbon-icons": "^7.0.7"
+    "carbon-icons": "^7.0.7",
+    "classnames": "^2.2.6"
   }
 }
