--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -15,11 +15,11 @@
     "server": "node ./server.js"
   },
   "dependencies": {
+    "@carbon/icons": "^10.5.0",
     "@disco-widgets/react-components": "^1.13.6",
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
-    "carbon-icons": "^7.0.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "ibm-watson": "^4.4.0",
