--- a/.eslintrc
+++ b/.eslintrc
@@ -22,7 +22,7 @@
     }
   },
   "rules": {
-    "@typescript-eslint/indent": ["error", 2],
+    "@typescript-eslint/indent": "off",
     "@typescript-eslint/camelcase": ["error", { "properties": "never" }],
     "@typescript-eslint/explicit-function-return-type": [
       "warn",
