--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "lerna": "^3.16.4",
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
+    "marked": "^0.7.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
