--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -36,7 +36,6 @@
   "dependencies": {
     "carbon-components": "^10.6.1",
     "carbon-components-react": "^7.6.1",
-    "carbon-icons": "^7.0.7",
-    "classnames": "^2.2.6"
+    "carbon-icons": "^7.0.7"
   }
 }
