feat: add discovery-styles package (#109)
* feat: add discovery-styles package

* docs: update README on styling

* fix build issue

--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@carbon/icons": "^10.5.0",
     "@disco-widgets/react-components": "^1.13.8",
+    "@disco-widgets/styles": "^1.0.0",
     "body-parser": "^1.19.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
