--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
     "marked": "^0.7.0",
+    "node-sass": "^4.12.0",
     "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
