--- a/package.json
+++ b/package.json
@@ -70,7 +70,8 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "lint-staged",
+      "post-rewrite": "lint-staged"
     }
   },
   "workspaces": [
