feat: PDF Viewer component (#115)
* feat: PDF Viewer component

... and beginnings of main Rich Preview component

* fix: use correct npm registry

* fix: add cancel checks after `await`

* fix: use PDF that can be used publicly

* fix: use `typings.d.ts` file

* fix: clean up stories

* test: add simple test

Still can't find a good way to test canvas.

* fix: props display in Storybook

* fix: add missing comma

--- a/.eslintrc
+++ b/.eslintrc
@@ -23,10 +23,20 @@
   },
   "rules": {
     "@typescript-eslint/indent": "off",
-    "@typescript-eslint/camelcase": ["error", { "properties": "never" }],
+    "@typescript-eslint/camelcase": ["error", {
+      "properties": "never"
+    }],
     "@typescript-eslint/explicit-function-return-type": [
       "warn",
-      { "allowTypedFunctionExpressions": true }
+      {
+        "allowTypedFunctionExpressions": true
+      }
+    ],
+    "@typescript-eslint/no-use-before-define": [
+      "error",
+      {
+        "functions": false
+      }
     ],
     "react/prop-types": "off"
   }
