fix: properly load web worker for use by PDF.js

--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -39,5 +39,9 @@
   "dependencies": {
     "lodash.get": "^4.4.2",
     "pdfjs-dist": "^2.1.266"
+  },
+  "devDependencies": {
+    "raw-loader": "^3.1.0",
+    "rollup-plugin-string": "^3.0.0"
   }
 }
