feat: generate node sdk (#111)
* feat: add ibm-watson (node-sdk) package

* docs: README instructions to generate node SDK

* remove README.md

* remove gitignore

* fix packages and gitignore

* update the README to be more explicit about steps

* update SDK generation readme stuff

* remove ibm-watson package from workspaces

* use eslintignore instead of gitignore for linter

* replace remaining references to ibm-watson with our @disco-widgets version

--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -23,7 +23,7 @@
     "carbon-components-react": "^7.6.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "ibm-watson": "^4.4.0",
+    "@disco-widgets/ibm-watson": "^1.0.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
