--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "node-sass-tilde-importer": "^1.0.2",
     "prettier": "^1.18.2",
     "prop-types": "^15.6.2",
+    "raw-loader": "^3.1.0",
     "react": "^16.4.1",
     "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
@@ -55,6 +56,7 @@
     "rollup-plugin-node-resolve": "^5.2.0",
     "rollup-plugin-peer-deps-external": "^2.2.0",
     "rollup-plugin-postcss": "^2.0.3",
+    "rollup-plugin-string": "^3.0.0",
     "rollup-plugin-typescript2": "^0.23.0",
     "rollup-plugin-url": "^2.2.2",
     "start-server-and-test": "^1.10.0",
