--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -21,7 +21,7 @@
   ],
   "peerDependencies": {
     "@carbon/icons": "^10.5.0",
-    "@disco-widgets/ibm-watson": "^1.0.0",
+    "ibm-watson": "^4.4.0",
     "@disco-widgets/styles": "1.0.0",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
