--- a/.eslintrc
+++ b/.eslintrc
@@ -8,7 +8,7 @@
   "env": {
     "es6": true
   },
-  "plugins": ["react"],
+  "plugins": ["react", "react-hooks"],
   "parserOptions": {
     "ecmaVersion": 2018,
     "sourceType": "module",
@@ -38,6 +38,8 @@
         "functions": false
       }
     ],
-    "react/prop-types": "off"
+    "react/prop-types": "off",
+    "react-hooks/rules-of-hooks": "error",
+    "react-hooks/exhaustive-deps": "warn"
   }
 }
