--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-import": "^2.18.2",
     "eslint-plugin-prettier": "^3.1.0",
     "eslint-plugin-react": "^7.14.3",
+    "eslint-plugin-react-hooks": "^2.0.1",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
     "@disco-widgets/ibm-watson": "^1.1.0",
