--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "^7.5.5",
     "@carbon/icons": "^10.5.0",
+    "@disco-widgets/ibm-watson": "^1.1.0",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-info": "^5.1.11",
     "@storybook/addon-knobs": "^5.1.11",
@@ -15,6 +16,7 @@
     "@testing-library/react": "^9.1.4",
     "@types/jest": "^24.0.18",
     "@types/lodash.get": "^4.4.6",
+    "@types/lodash.isequal": "^4.5.5",
     "@types/node": "^12.7.3",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
@@ -37,7 +39,6 @@
     "eslint-plugin-react-hooks": "^2.0.1",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
-    "@disco-widgets/ibm-watson": "^1.1.0",
     "lerna": "^3.16.4",
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
