--- a/packages/discovery-components-react/.gitignore
+++ b/packages/discovery-components-react/.gitignore
@@ -13,9 +13,7 @@ dist
 .DS_Store
 .env
 .env.local
-.env.development.local
-.env.test.local
-.env.production.local
+storybook-static
 
 npm-debug.log*
 yarn-debug.log*
