--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -13,7 +13,7 @@
     "code-coverage": "jest --collectCoverage",
     "build": "rollup -c",
     "start": "rollup -c -w",
-    "storybook": "start-storybook",
+    "storybook": "start-storybook --ci --port=9002",
     "storybook:build": "build-storybook",
     "storybook:build:release": "build-storybook -o ../../docs/storybook"
   },
