feat: integrate rich preview toolbar (#165)
* fix: don't format on save for SCSS

* feat: add toolbar to RichPreview

* fix: require `document` prop, cleanup tests/stories

* feat: calculate page count

* fix: pass document data to RichPreview in example

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,10 +3,19 @@
   "eslint.validate": [
     "javascript",
     "javascriptreact",
-    { "language": "typescript", "autoFix": true },
-    { "language": "typescriptreact", "autoFix": true }
+    {
+      "language": "typescript",
+      "autoFix": true
+    },
+    {
+      "language": "typescriptreact",
+      "autoFix": true
+    }
   ],
   "editor.formatOnSave": true,
+  "[scss]": {
+    "editor.formatOnSave": false
+  },
   "[javascript]": {
     "editor.formatOnSave": false
   },
