--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -38,6 +38,7 @@
     "access": "public"
   },
   "dependencies": {
+    "@types/uuid": "^3.4.5",
     "lodash.get": "^4.4.2",
     "lodash.isequal": "^4.5.0",
     "pdfjs-dist": "^2.1.266"
