--- a/packages/ibm-watson/package.json
+++ b/packages/ibm-watson/package.json
@@ -19,5 +19,8 @@
     "@types/node": "^12.0.8",
     "extend": "^3.0.2",
     "ibm-cloud-sdk-core": "^0.3.5"
+  },
+  "publishConfig": {
+    "access": "public"
   }
 }
