--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@testing-library/react": "^9.1.4",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
+    "@types/lodash.deburr": "^4.1.6",
     "@types/lodash.get": "^4.4.6",
     "@types/lodash.isequal": "^4.5.5",
     "@types/mustache": "^0.8.32",
