feat: pull style from html (#208)
* feat: pull bbox styling from html string

* fix: add stylesheet to DOM, use classnames for nodes

...instead of inline styles

* fix: refactor

* fix: remove license block; unneeded code

* fix: recreate PdfFallback when changing document

* fix: render empty pages, at right dimensions

* test: allow rendering docs that don't include 'html'

* feat: autosize cells if no styling found

Generate short id for mapped cells (as `key` prop)

* fix: add types

* refactor: use `useReducer`

* fix: use types

* fix: reset page when switching documents

* test: fix

* test: fix (again)

* fix: remove 100% height, which causes issues

* test: remove `html` checkbox from story

--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "test": "cross-env CI=1 react-scripts test",
     "test:watch": "react-scripts test --watch",
+    "test:debug": "react-scripts --inspect-brk test --runInBand --no-cache",
     "code-coverage": "jest --collectCoverage",
     "build": "rollup -c",
     "start": "rollup -c -w",
