--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -7,9 +7,10 @@
   "version": "1.9.0",
   "main": "scss/index.scss",
   "scripts": {
-    "build": "node-sass --importer=../../node_modules/node-sass-tilde-importer scss/index.scss css/index.css",
+    "build": "node-sass --importer=../../node_modules/node-sass-tilde-importer --source-map=true scss/index.scss css/index.css",
     "prepublish": "yarn run build",
-    "start": "yarn run build -- --watch"
+    "start": "yarn run build -- --watch",
+    "analyze": "source-map-explorer css/index.css"
   },
   "files": [
     "css/**/*",
