--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -40,11 +40,9 @@
     "access": "public"
   },
   "dependencies": {
-    "@types/uuid": "^3.4.5",
     "lodash": "^4.17.15",
-    "lodash.get": "^4.4.2",
-    "lodash.isequal": "^4.5.0",
     "mustache": "^3.1.0",
     "pdfjs-dist": "^2.1.266"
-  }
+  },
+  "devDependencies": {}
 }
