--- a/packages/ibm-watson/package.json
+++ b/packages/ibm-watson/package.json
@@ -18,7 +18,7 @@
   "dependencies": {
     "@types/node": "^12.0.8",
     "extend": "^3.0.2",
-    "ibm-cloud-sdk-core": "^0.3.5"
+    "ibm-cloud-sdk-core": "1.2.0"
   },
   "publishConfig": {
     "access": "public"
