--- a/packages/ibm-watson/tsconfig.json
+++ b/packages/ibm-watson/tsconfig.json
@@ -15,9 +15,8 @@
     "moduleResolution": "node" /* Specify module resolution strategy: 'node' (Node.js) or 'classic' (TypeScript pre-1.6). */,
     "types": [
       "node",
-      "extend",
-      "is-stream"
+      "extend"
     ] /* Type declaration files to be included in compilation. */
   },
-  "include": ["./lib/*.ts", "./discovery/*.ts"]
+  "include": ["./lib/*.ts", "./auth/*.ts", "./discovery/*.ts"]
 }
