--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@svgr/rollup": "^4.3.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
+    "@types/classnames": "^2.2.9",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
     "@types/lodash.deburr": "^4.1.6",
