--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -40,6 +40,7 @@
     "access": "public"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "lodash": "^4.17.15",
     "mustache": "^3.1.0",
     "pdfjs-dist": "^2.1.266"
