--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -44,5 +44,8 @@
     "lodash": "^4.17.15",
     "mustache": "^3.1.0",
     "pdfjs-dist": "^2.1.266"
+  },
+  "devDependencies": {
+    "@types/classnames": "^2.2.9"
   }
 }
