docs: Cleanup for GitHub (#279)
* docs: update README

* chore: remove root .env file

* chore: update package.json files

* docs: add Apache-2.0 license file

* add some badges

* address comments

* fix comments

--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -1,9 +1,11 @@
 {
   "private": true,
-  "name": "discovery-components-react-example",
-  "license": "MIT",
-  "homepage": ".",
+  "name": "kitchen-sink",
   "version": "1.22.5",
+  "description": "Discovery components kitchen sink example application used to showcase components in a full application",
+  "license": "Apache-2.0",
+  "author": "IBM Corp.",
+  "homepage": ".",
   "scripts": {
     "build": "react-scripts build",
     "eject": "react-scripts eject",
