--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -1,10 +1,10 @@
 {
   "name": "@disco-widgets/react-components",
-  "description": "",
-  "license": "MIT",
-  "author": "",
-  "repository": "/discovery-components-react",
   "version": "1.49.1",
+  "description": "Discovery components built with the React framework and IBM Carbon components",
+  "license": "Apache-2.0",
+  "author": "IBM Corp.",
+  "repository": "https://github.com/watson-developer-cloud/discovery-components",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
   "scripts": {
