--- a/packages/ibm-watson/package.json
+++ b/packages/ibm-watson/package.json
@@ -3,7 +3,7 @@
   "version": "1.5.4",
   "description": "IBM Cloud Node SDK",
   "license": "Apache-2.0",
-  "repository": "/ibm-watson",
+  "repository": "https://github.com/watson-developer-cloud/node-sdk",
   "keywords": [
     "ibm"
   ],
