--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@types/classnames": "^2.2.9",
+    "@types/dompurify": "^0.0.33",
     "@types/debounce": "^1.2.0",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
