--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -41,6 +41,7 @@
   },
   "dependencies": {
     "classnames": "^2.2.6",
+    "dompurify": "^2.0.7",
     "debounce": "^1.2.0",
     "lodash": "^4.17.15",
     "mustache": "^3.1.0",
