--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
     "@types/classnames": "^2.2.9",
-    "@types/dompurify": "^0.0.33",
     "@types/debounce": "^1.2.0",
+    "@types/dompurify": "^0.0.33",
     "@types/jest": "^24.0.18",
     "@types/lodash": "^4.14.141",
     "@types/lodash.deburr": "^4.1.6",
@@ -26,6 +26,8 @@
     "@types/node": "^12.7.3",
     "@types/react": "^16.9.2",
     "@types/react-dom": "^16.9.0",
+    "@types/react-virtualized": "^9.21.1",
+    "@types/seedrandom": "^2.4.28",
     "@types/storybook__addon-knobs": "^5.0.3",
     "@types/storybook__react": "^4.0.2",
     "@types/uuid": "^3.4.5",
