--- a/examples/discovery-components-react-example/package.json
+++ b/examples/discovery-components-react-example/package.json
@@ -29,6 +29,7 @@
     "cors": "^2.8.5",
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
+    "http-proxy-middleware": "^0.20.0",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
