--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -1,8 +1,8 @@
 {
   "private": true,
-  "name": "kitchen-sink",
+  "name": "discovery-search-app",
   "version": "1.24.18",
-  "description": "Discovery components kitchen sink example application used to showcase components in a full application",
+  "description": "Discovery components example application used to showcase components in a full application",
   "license": "Apache-2.0",
   "author": "IBM Corp.",
   "homepage": ".",
