--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "^7.5.5",
     "@carbon/icons": "^10.5.0",
-    "@storybook/addon-actions": "^5.1.11",
-    "@storybook/addon-info": "^5.1.11",
-    "@storybook/addon-knobs": "^5.1.11",
-    "@storybook/addon-storysource": "^5.1.11",
-    "@storybook/react": "^5.1.11",
+    "@disco-widgets/ibm-watson": "^1.1.0",
+    "@storybook/addon-actions": "5.3.0-alpha.38",
+    "@storybook/addon-docs": "5.3.0-alpha.38",
+    "@storybook/addon-knobs": "5.3.0-alpha.38",
+    "@storybook/addon-storysource": "5.3.0-alpha.38",
+    "@storybook/preset-create-react-app": "^1.2.0",
+    "@storybook/react": "5.3.0-alpha.38",
     "@svgr/rollup": "^4.3.2",
     "@testing-library/jest-dom": "^4.1.0",
     "@testing-library/react": "^9.1.4",
@@ -27,12 +29,10 @@
     "@types/react-dom": "^16.9.0",
     "@types/react-virtualized": "^9.21.1",
     "@types/seedrandom": "^2.4.28",
-    "@types/storybook__addon-knobs": "^5.0.3",
     "@types/storybook__react": "^4.0.2",
     "@types/uuid": "^3.4.5",
     "@typescript-eslint/eslint-plugin": "^2.1.0",
     "@typescript-eslint/parser": "^2.1.0",
-    "awesome-typescript-loader": "^5.2.1",
     "babel-loader": "^8.0.6",
     "carbon-components": "^10.6.0",
     "carbon-components-react": "^7.6.0",
@@ -59,7 +59,6 @@
     "prop-types": "^15.6.2",
     "raw-loader": "^3.1.0",
     "react": "^16.4.1",
-    "react-docgen-typescript-loader": "^3.1.1",
     "react-dom": "^16.4.1",
     "react-scripts": "^3.1.1",
     "rollup": "^1.20.2",
