Filter which stories are published with the release build (#382)
* Filter which stories are published with the release build

* Address comment

* Fix rebase issues

--- a/packages/discovery-components-react/package.json
+++ b/packages/discovery-components-react/package.json
@@ -16,7 +16,7 @@
     "start": "rollup -c -w",
     "storybook": "start-storybook --ci --port=9002",
     "storybook:build": "build-storybook",
-    "storybook:build:release": "build-storybook -o ../../docs/storybook",
+    "storybook:build:release": "STORYBOOK_BUILD_MODE=production build-storybook -o ../../docs/storybook",
     "analyze": "source-map-explorer 'dist/index.js'"
   },
   "files": [
