--- a/examples/discovery-search-app/package.json
+++ b/examples/discovery-search-app/package.json
@@ -20,7 +20,6 @@
   },
   "dependencies": {
     "@carbon/icons": "^10.5.0",
-    "@disco-widgets/ibm-watson": "^1.5.5",
     "@disco-widgets/react-components": "^1.68.5",
     "@disco-widgets/styles": "^1.32.1",
     "body-parser": "^1.19.0",
@@ -30,6 +29,7 @@
     "dotenv": "^8.1.0",
     "express": "^4.17.1",
     "http-proxy-middleware": "^0.20.0",
+    "ibm-watson": "5.2.0-alpha-1",
     "prop-types": "^15.6.2",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
