--- a/package.json
+++ b/package.json
@@ -5,7 +5,6 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "^7.5.5",
     "@carbon/icons": "^10.5.0",
-    "@disco-widgets/ibm-watson": "^1.1.0",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-info": "^5.1.11",
     "@storybook/addon-knobs": "^5.1.11",
@@ -49,6 +48,7 @@
     "fast-xml-parser": "^3.14.0",
     "gh-pages": "^2.1.1",
     "husky": "^3.0.5",
+    "ibm-watson": "5.2.0-alpha-1",
     "lerna": "^3.16.4",
     "lerna-update-wizard": "^0.16.0",
     "lint-staged": "^9.2.5",
