Set theme jekyll-theme-cayman

--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -7,3 +7,5 @@ yo_dawg: "![](https://imgflip.com/s/meme/Yo-Dawg-Heard-You.jpg)"
 aux_links:
   "Discovery Widgets on GitHub":
     - "//github.ibm.com/watson-discovery/disco-widgets"
+
+theme: jekyll-theme-cayman
