chore: fix codeowners file

--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -1,4 +1,4 @@
-@maniax89 @noah-eigenfeld @kabeaty @Steven-Gassert @ChrisGillin
+* @maniax89 @noah-eigenfeld @kabeaty @Steven-Gassert @ChrisGillin
 
 /packages/discovery-components-react/src/components/DocumentPreview/ @jhpedemonte @ColbyJohnIBM @JuanNicolasGarcia @broulaye @anibapat
 /packages/discovery-components-react/src/components/CIDocument/ @jhpedemonte @ColbyJohnIBM @JuanNicolasGarcia @broulaye @anibapat
