--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,9 @@ before_install:
   - npm install -g yarn
 script:
   - yarn lint
-  - lerna run build
-  - lerna run storybook:build
-  - lerna run test
+  # - lerna run build
+  # - lerna run storybook:build
+  # - lerna run test
 before_deploy:
   - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
   - git config --global push.default simple
@@ -26,7 +26,7 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: npx lerna publish -y
+    script: git config --list
     skip_cleanup: true
     on:
       branch: master
