--- a/.travis.yml
+++ b/.travis.yml
@@ -23,7 +23,7 @@ before_deploy:
   - git config --global push.default simple
   - git config --global user.email "watdevex@us.ibm.com"
   - git config --global user.name "Watson Github Bot"
-  - git remote add origin https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}
+  - git config remote.origin.url https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}
   - git fetch origin master
   - git checkout master
 
