--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,12 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
     "publish": {
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "allowBranch": ["master"]
     },
     "version": {
       "message": "chore: publish to NPM [ci skip]",
