--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
     "@babel/core": "7.5.5",
     "@babel/runtime": "^7.5.5",
     "@carbon/icons": "^10.5.0",
+    "@commitlint/cli": "^8.2.0",
+    "@commitlint/config-conventional": "^8.2.0",
     "@storybook/addon-actions": "^5.1.11",
     "@storybook/addon-info": "^5.1.11",
     "@storybook/addon-knobs": "^5.1.11",
@@ -90,6 +92,7 @@
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged",
+      "commit-msg": "commitlint -E HUSKY_GIT_PARAMS",
       "post-rewrite": "lint-staged"
     }
   },
