--- a/lerna.json
+++ b/lerna.json
@@ -6,6 +6,7 @@
   "command": {
     "publish": {
       "conventionalCommits": true,
+      "conventionalPrerelease": true,
       "allowBranch": ["master", "develop", "travis_ci_deploy"]
     },
     "version": {
