--- a/.travis.yml
+++ b/.travis.yml
@@ -24,10 +24,15 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: npm lerna publish -y
+    script: npx lerna publish -y --create-release github
     skip_cleanup: true
     on:
       branch: master
+  - provider: script
+    script: npx lerna publish -y --conventional-prerelease --preid beta --dist-tag beta
+    skip_cleanup: true
+    on:
+      branch: develop
 notifications:
   email:
     on_success: change
