--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_deploy:
   - git config --global user.email "watdevex@us.ibm.com"
   - git config --global user.name "Watson Github Bot"
   - git config remote.origin.url https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}
-  - git checkout master
+  - git checkout $TRAVIS_BRANCH
 
 deploy:
   - provider: script
