--- a/packages/discovery-react-components/package.json
+++ b/packages/discovery-react-components/package.json
@@ -26,13 +26,13 @@
     "dist"
   ],
   "peerDependencies": {
-    "@carbon/icons": "^10.5.0",
-    "@ibm-watson/discovery-styles": "^1.0.0",
-    "carbon-components": "^10.6.0",
-    "carbon-components-react": "^7.6.0",
+    "@carbon/icons": ">= 10.5.0 < 11",
+    "@ibm-watson/discovery-styles": "1.x.x",
+    "carbon-components": ">= 10.6.0 < 11",
+    "carbon-components-react": ">= 7.6.0 < 8",
     "ibm-watson": "^5.2.0-alpha-1",
-    "react": "^16.8.0",
-    "react-dom": "^16.8.0"
+    "react": ">= 16.8.0 < 17",
+    "react-dom": ">= 16.8.0 < 17"
   },
   "engines": {
     "node": ">=8",
@@ -49,7 +49,7 @@
     "htmlparser2": "^4.0.0",
     "lodash": "^4.17.15",
     "mustache": "^3.1.0",
-    "pdfjs-dist": "^2.1.266",
+    "pdfjs-dist": "^2.2.228",
     "react-virtualized": "^9.21.1"
   },
   "devDependencies": {
