--- a/packages/discovery-styles/package.json
+++ b/packages/discovery-styles/package.json
@@ -17,7 +17,7 @@
     "scss/**/*"
   ],
   "peerDependencies": {
-    "carbon-components": "^10.6.0"
+    "carbon-components": ">= 10.6.0 < 11"
   },
   "engines": {
     "node": ">=8",
