--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "rollup-plugin-url": "^2.2.2",
     "source-map-explorer": "2.0.1",
     "start-server-and-test": "^1.10.0",
+    "tsconfig-paths-webpack-plugin": "^3.2.0",
     "typescript": "^3.5.3",
     "webpack": "4.39.1"
   },
