--- a/packages/discovery-react-components/.storybook/tsconfig.json
+++ b/packages/discovery-react-components/.storybook/tsconfig.json
@@ -1,6 +1,17 @@
 {
   "extends": "../tsconfig.json",
   "compilerOptions": {
-    "isolatedModules": false
+    "isolatedModules": false,
+    "baseUrl": "../src",
+    "paths": {
+      "@rootUtils/*": ["utils/*"],
+      "@CIDocument/*": ["components/CIDocument/*"],
+      "@DiscoverySearch/*": ["components/DiscoverySearch/*"],
+      "@DocumentPreview/*": ["components/DocumentPreview/*"],
+      "@ResultsPagination/*": ["components/ResultsPagination/*"],
+      "@SearchFacets/*": ["components/SearchFacets/*"],
+      "@SearchInput/*": ["components/SearchInput/*"],
+      "@SearchResults/*": ["components/SearchResults/*"]
+    }
   }
 }
