chore: add deploy logic back to travis (#5)
* chore: add deploy logic back to travis

* chore: change name of deployer

* chore: add npmrc to gitignore

* chore: test deploy

* enable branch building just for this PR

* do branch deploy

* more travis testing

* remote fetch

* overwrite install

* checkout master

* back to how it was

* chore: add commitlint

* chore: allow develop

* chore: add comments

* chore: allow branch

* chore: prerelease

* chore: preid beta

* chore: fix lerna config

* chore: remove extra comments

* docs: update readme and contributing

* chore: use travis branch

* chore: use oneflow strategy for publishing

* docs: few more updates to release pattern

* chore: change travis badge to develop

* docs: detail out conventional-graduate step

--- a/lerna.json
+++ b/lerna.json
@@ -1,13 +1,12 @@
 {
-  "packages": [
-    "packages/*"
-  ],
+  "packages": ["packages/*"],
   "version": "independent",
   "npmClient": "yarn",
   "useWorkspaces": true,
   "command": {
     "publish": {
-      "conventionalCommits": true
+      "conventionalCommits": true,
+      "allowBranch": ["develop", "release/*", "hotfix/*"]
     },
     "version": {
       "message": "chore: publish to NPM [ci skip]",
