--- a/.travis.yml
+++ b/.travis.yml
@@ -8,14 +8,28 @@ addons:
       - libgconf-2-4
 branches:
   only:
-    - master
-before_install:
-  - npm install -g yarn
+    - develop
 script:
   - yarn lint
   - lerna run build
   - lerna run storybook:build
   - lerna run test
+before_deploy:
+  - echo "//registry.npmjs.org/:_authToken=${NPM_TOKEN}" > ~/.npmrc
+  - git config --global push.default simple
+  - git config --global user.email "watdevex@us.ibm.com"
+  - git config --global user.name "Watson Github Bot"
+  - git config remote.origin.url https://${GH_TOKEN}@github.com/${TRAVIS_REPO_SLUG}
+  - git checkout $TRAVIS_BRANCH
+
+# following https://www.endoflineblog.com/oneflow-a-git-branching-model-and-workflow
+deploy:
+  # do regular beta releases
+  - provider: script
+    script: npx lerna publish -y --conventional-prerelease --preid beta --dist-tag beta
+    skip_cleanup: true
+    on:
+      branch: develop
 notifications:
   email:
     on_success: change
