--- a/packages/discovery-react-components/tsconfig.prod.json
+++ b/packages/discovery-react-components/tsconfig.prod.json
@@ -2,17 +2,6 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "declaration": true,
-    "isolatedModules": false,
-    "baseUrl": "src",
-    "paths": {
-      "@rootUtils/*": ["utils/*"],
-      "@CIDocument/*": ["components/CIDocument/*"],
-      "@DiscoverySearch/*": ["components/DiscoverySearch/*"],
-      "@DocumentPreview/*": ["components/DocumentPreview/*"],
-      "@ResultsPagination/*": ["components/ResultsPagination/*"],
-      "@SearchFacets/*": ["components/SearchFacets/*"],
-      "@SearchInput/*": ["components/SearchInput/*"],
-      "@SearchResults/*": ["components/SearchResults/*"]
-    }
+    "isolatedModules": false
   }
 }
